--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-flask
-scikit-learn
-pandas
-joblib
-gunicorn
+Flask==2.3.3
+gunicorn==21.2.0
+joblib==1.3.2
+requests==2.31.0
+
+numpy==1.24.4
+scipy==1.10.1
+scikit-learn==1.3.2
